Add images, Final edits

--- a/src/assets/descriptions/567ce.md
+++ b/src/assets/descriptions/567ce.md
@@ -2,10 +2,10 @@
 
 After Justinian's death in 565 CE his great efforts to reunite the empire slowly began to erode.
 
-Lombards, of the Germanic people, took back parts of Italy in the west and ruled for a few centuries.
+Lombards, of the Germanic people, took back parts of Italy in the west and ruled for two centuries.
 
 Northern Slavs invaded and took over the Balkan, cutting off the east from the west.
 
-Arabs Caliphate conquered regions in Africa and Syria.
+Arab Caliphates conquered regions in Africa and Syria.
 
 Starting from the 600s, Byzantine and the Arabs engaged in war that lasted for many centuries. In 674 CE, the Arabs launched the first major siege on Constantinople and their second in 717 CE, both times failed.
