--- a/src/assets/descriptions/667bce.md
+++ b/src/assets/descriptions/667bce.md
@@ -1,3 +1,3 @@
 # 667 BCE
 
-Byzantium was first colonized by ancient Greeks from Megara. The name Byzantium is derived from the name of their king Byzas yet much of the history of its origin is uncertain. What is certain however is that it was a desirable fertile area and even moreso desirable for its strategic location for trade and defense that lended heavily to its eventual longetivity.
+Byzantium was first colonized by ancient Greeks from Megara. The name Byzantium is derived from the name of their king Byzas yet much of the history of its origin is uncertain. What is certain however is that it was a desirable fertile area and more so desirable for its strategic location for trade and defense that benefited heavily to its eventual longevity.
