--- a/src/assets/descriptions/814ce.md
+++ b/src/assets/descriptions/814ce.md
@@ -2,4 +2,4 @@
 
 After Charlemagne's death, the Western Empire started to crumble (not so dissimilarly to Justinian's efforts of reunification several centuries back).
 
-Byzantine Empire faced two major conflicts over this period of time. One, with the Bulgars taking rule over much of the Balkans. The other with Muslims in the seas.
+The Byzantine Empire faced two major conflicts over this period of time: the Bulgars in the Balkans and Arabs in the sea.
